# tcg

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: main.py  tournament.py  train_colab.ipynb  train_counter.py  train_defensive.py  train_ml.py
src/tcg/: __init__.py  config.py  controller.py  counter_gym_env.py  defensive_gym_env.py  game.py  gym_env.py  gym_game.py  utils.py
src/tcg/players/: README.md  __init__.py  anti_ml_player.py  defensive_player.py  ml_player.py  sample_random.py  strategic_player.py  strategy_aggressive_center.py  strategy_economist_aggressive.py  strategy_expansionist.py  strategy_expansionist_aggressive.py  strategy_map_control.py  strategy_right_flank.py  strategy_right_flank_aggressive.py  strategy_right_heavy.py  strategy_right_heavy_aggressive.py  strategy_rush_center.py  strategy_secure_home.py  strategy_secure_home_aggressive.py  template_player.py
src/tcg/players/player_kishida_counter/: ONCT.ipynb  ONCT.py  __init__.py
src/tcg/players/player_kishida_mlppo/: __init__.py  ml_player.py
src/tcg/players_kishida/: gym_env.py  gym_game.py
